# OpenglMvpRenderer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cci/openglrendermvp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opengl_mvp_renderer.cpp
app/src/main/cpp/glm/: CMakeLists.txt
app/src/main/java/com/cci/openglrendermvp/: GlMvpRenderer.kt  MainActivity.kt  SingleThreadHandlerExecutor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cci/openglrendermvp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
